test/FAIL/runcmd/memory_match/06_test_run.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="no file loaded"
#-------

run 0x12